--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
     "name": "atrioc.org",
+    "description": "Official Atrioc-CLU app",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@vercel/analytics": "^1.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "build": "react-scripts build"
     },
     "eslintConfig": {
         "extends": [
