--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-    "name": "atrioc.org",
-    "description": "Official Atrioc-CLU app",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@vercel/analytics": "^1.1.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "tailwindcss": "^3.3.5"
-    }
+  "name": "atrioc.org",
+  "description": "Official Atrioc-CLU app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@vercel/analytics": "^1.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "prettier": "3.0.3",
+    "tailwindcss": "^3.3.5"
+  }
 }
